--- a/style.css
+++ b/style.css
@@ -1,77 +1,53 @@
-** {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 body {
-  font-family: Arial, Helvetica, sans-serif;
-  line-height: 1.6;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: "Poppins", sans-serif;
+    margin: 0;
+    min-height: 100vh;
 }
 
-ul {
-  list-style: none;
+button {
+    background-color: rebeccapurple;
+    border: none;
+    color: white;
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    padding: 1rem;
+    transition: transform 0.3s ease-in-out;
 }
 
-ul li {
-  padding: 5px;
-  background: #f4f4f4;
-  margin: 5px 0;
+button.active {
+    transform: translateX(-100px);
 }
 
-header {
-  background: #f4f4f4;
-  padding: 1rem;
-  text-align: center;
+nav {
+    background-color: rebeccapurple;
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    padding: 2rem;
+    transform: translateX(100%);
+    transition: transform 0.3s ease-in-out;
 }
 
-.container {
-  margin: auto;
-  width: 500px;
-  overflow: auto;
-  padding: 3rem 2rem;
+nav.active{
+    transform: translateX(0);
 }
 
-#my-form {
-  padding: 2rem;
-  background: #f4f4f4;
+nav ul {
+    padding: 0;
+    list-style-type: none;
+    margin: 0;
 }
 
-#my-form label {
-  display: block;
+nav ul li {
+    padding: 1rem 0;
 }
 
-#my-form input[type='text'] {
-  width: 100%;
-  padding: 8px;
-  margin-bottom: 10px;
-  border-radius: 5px;
-  border: 1px solid #ccc;
-}
-
-.btn {
-  display: block;
-  width: 100%;
-  padding: 10px 15px;
-  border: 0;
-  background: #333;
-  color: #fff;
-  border-radius: 5px;
-  margin: 5px 0;
-}
-
-.btn:hover {
-  background: #444;
-}
-
-.bg-dark {
-  background: #333;
-  color: #fff;
-}
-
-.error {
-  background: orangered;
-  color: #fff;
-  padding: 5px;
-  margin: 5px;
+nav a {
+    color: white;
+    text-decoration: none;
 }
