--- a/styles.css
+++ b/styles.css
@@ -5,27 +5,8 @@ body {
     font-family: "Poppins", sans-serif;
     margin: 0;
     min-height: 100vh;
-}
-
-button {
     background-color: rebeccapurple;
-    color: #fff;
-    border-radius: 5px;
-    border: none;
-    padding: 1rem;
-    font-family: inherit; 
+    color: white;
+    font-size: 2rem;
 }
 
-#container {
-    position: fixed;
-    bottom: 10px;
-    right: 10px;
-}
-
-.toast {
-    background-color: rebeccapurple;
-    border-radius: 5px;
-    color: #fff;
-    padding: 2rem;
-    margin: 1rem;
-}
