--- a/styles.css
+++ b/styles.css
@@ -2,38 +2,26 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
     font-family: "Poppins", sans-serif;
     margin: 0;
     min-height: 100vh;
-    text-align: center;
-    padding: 5rem;
-    transition: background 0.3s linear,
-    color 0.3s linear;
+   }
+
+.carousel {
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+    width: 500px;
+    height: 500px;
+    overflow: hidden;
+}   
+
+.image-container {
+display: flex;
+transition: transform 0.3s linear;
+transform: translateX(0);
 }
 
-body.dark {
-    background-color: #1f1f1f;
-    color: white;
-}
-
-.toggle-container{
-    position: fixed;
-    top: 10px;
-    right: 10px;
-}
-
-label {
-    background-color: rebeccapurple;
-    border-radius: 50%;
-    display: inline-block;
-    width: 50px;
-    height: 50px;
-    cursor: pointer;
-    user-select: none;
-    transition: background 0.3s linear,
-}
-
-body.dark label {
-    background-color: #ffff;
+img {
+    object-fit: cover;
+    height: 500px;
+    width: 500px;
 }
