--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 body {
+    background-color: rebeccapurple;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -7,21 +8,16 @@ body {
     min-height: 100vh;
    }
 
-.carousel {
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+#container {
+    box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.3);
     width: 500px;
     height: 500px;
     overflow: hidden;
-}   
-
-.image-container {
-display: flex;
-transition: transform 0.3s linear;
-transform: translateX(0);
 }
 
 img {
+    transform-origin: center center;
     object-fit: cover;
-    height: 500px;
-    width: 500px;
+    width: 100%;
+    height: 100%;
 }
