--- a/styles.css
+++ b/styles.css
@@ -1,188 +1,194 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 *{
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
+    scroll-padding-top: 2rem;
+    scroll-behavior: smooth;
     box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
 }
-html {
-    font-size: 62.5%;
+:roots {
+    --main-color: orange;
+    --text-color: #171427;
+    --bg-color: rgb(255, 255, 255);
 }
-body {
- height: 100vh;
- font: 1.6rem Helvetica, Arial;
- margin: 0;
+img{
+    width: 100%;
 }
-
-.grid-container {
-    display: grid;
-    grid-template-areas: 
-    'header'
-    'main'
-    'footer';
-    grid-template-columns: 1fr;
-    grid-template-rows: 5rem 1fr 7rem;
-    height: 100%;
+body{
+    color: var(--text-color);
 }
-
+.container{
+    max-width: 1068px;
+    margin: auto;
+    width: 100%;
+    justify-content: space-between;
+}
+section{
+    padding: 4rem 0 3rem;
+}
+/* header */
 header{
-    grid-area: header;
-    background-color: black;
-    color: white;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: var(--bg-color);
+    box-shadow: 0 1px 4px hsl(0 4% 15% / 10%);
+    z-index: 100;
+}
+.nav {
+    display:flexbox;
+    align-items:center;
+    padding: 20px 0;
+}
+.logo {
+    font-size: 1.1rem;
+    color: var(--text-color);
+    font-weight: 400;
+}
+#cart-icon{
+    font-size: 1.5rem;
+    cursor: pointer;
+    right: 0%;
+    align-items: center;
+}
+.cart{
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 360px;
+    min-height: 100vh;
+    padding: 20px;
+    background: var(--bg-color);
+    box-shadow: -2px 0 4px hsl(0 4% 15% / 10%);
+    transition: 0.3s;
+}
+.cart.active{
+    right: 0;
+}
+.cart-title {
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin-top: 2rem;
+}
+.cart-box{
+    display: grid;
+    grid-template-columns: 32% 50% 18%;
+    align-items: center;
+    gap: 1rem;
+    margin-top: 1rem;
+}
+.cart-img{
+    width: 100px;
+    height: 100px;
+    object-fit: contain;
+    padding: 10px;
+}
+.datail-box{
+    display: grid;
+    row-gap: 0.5rem;
+}
+.cart-product-title{
+    font-size: 1rem;
+    text-transform: uppercase;
+}
+.cart-price{
+    font-weight: 500;
+}
+.cart-quantity{
+    border: 1px solid var(--text-color);
+    outline-color: var(--main-color);
+    width: 2.4rem;
+    text-align: center;
+    font-size: 1rem;
+}
+.cart-remove{
+    font-size: 24px;
+    color: orangered;
+    cursor: pointer;
+}
+.total{
     display: flex;
-    justify-content: space-between;
-    padding: 0.5rem;
-    align-items: center;
-
+    justify-content: flex-end;
+    margin-top: 1.5rem;
+    border-top: 1px solid var(--text-color);
 }
-
-header a {
-    color: #ffffff;
-    font-weight: bold;
-    text-decoration: none;
-    align-items: center;
-    font-family: 'Times New Roman', Times, serif;
+.total-title{
+    font-size: 1rem;
+    font-weight: 600;
 }
-
-header a:hover{
-    color:rebeccapurple;
+.total-price{
+    margin-left: 0.5rem;
 }
-
-.brand a {
+.btn-buy{
+    display: flex;
+    margin: 1.5rem auto 0 auto;
+    padding: 12px 20px;
+    border: none;
+    background: lightcyan;
+    color: orangered;
+    font-size: 1rem;
+    font-weight: 500;
+    cursor: pointer;
+}
+.btn-buy:hover {
+    background: var(--text-color);
+}
+#close-cart{
+    position: absolute;
+    top: 1rem;
+    right: 0.8rem;
     font-size: 2rem;
+    color: var(--text-color);
+    cursor:pointer;
 }
-
-button {
-    border-color: aqua;
-    color: black;
-    block-size: 2rem;
-    
+.section-title{
+    font-size: 1.5rem;
+    font-weight: 600;
+    text-align:center;
+    margin-bottom: 1.5rem;
 }
-
-footer {
-    background-color: aqua;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: #ffffff;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+.shop{
+    margin-top: 2rem;
 }
-
-footer a {
-    color: #ffffff;
-    text-decoration: none;
-    font-family: 'Times New Roman', Times, serif;
-    font-weight: bold;
+/* shop content*/
+.shop-content{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(220px,auto));
+    gap: 1.5rem;
 }
-
-footer a:hover {
-    color: rebeccapurple;
+.product-box{
+    position: relative;
 }
-   
-.h11 {
-    font-family: 'Times New Roman', Times, serif;
-    display: flex;
-    background-color: silver;
-    align-items: center;
-    justify-content: center;
-    font-size: 3rem;
+.product-box:hover{
+    padding: 10px;
+    border: 1px solid var(--text-color);
+    transition: 0.4s;
 }
-
-.h22{
-    font-family:'Times New Roman', Times, serif;
-    display: flex;
-    justify-content: center;
-    align-items: baseline;
-    padding:3rem ;
+.product-img{
+    width: 100%;
+    height: auto;
+    margin-bottom: 0.5rem;
 }
-
- /* products */
-.products {
-display: flex;
-flex-wrap: wrap;
-list-style-type: none;
-padding: 0;
-margin: 0;
-justify-content:space-around;
+.product-title{
+    font-size: 1.1rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin-bottom: 0.5rem;
 }
-
-.products li {
-    flex: 0 1 30rem;
-    margin: 1rem;
-    margin-bottom: 0;
-    height: 42rem;
-    
+.price{
+    font-weight: 500;
 }
-
- .album1 {
-     font-family: 'Times New Roman', Times, serif;
-     font-size: 24px;
-     text-align: center;
- }
-
- .album2 {
-     font-family: 'Times New Roman', Times, serif;
-     font-size: 24px;
-     text-align: center;
- }
-
- .cart1 {
-     font-family: 'Times New Roman', Times, serif;
-     justify-content: space-around;
+.add-cart{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    background: var(--text-color);
+    color: var(--bg-color);
+    padding: 10px;
+    cursor: pointer;
 }
-
-.cart2 {
-    font-family: 'Times New Roman', Times, serif;
-    justify-content: space-around;
-}
-
-.merchs{
-    display: flex;
-flex-wrap: wrap;
-list-style-type: none;
-padding: 0;
-margin: 0;
-justify-content:space-around;
-}
-
-.merchs li {
-    flex: 0 1 30rem;
-    margin: 1rem;
-    margin-bottom: 0;
-    height: 42rem;
-}
-
-.album3 {
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 24px;
-    text-align: center;
-}
-
-.album4 {
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 24px;
-    text-align: center;  
-}
-
-.cart3 {
-    font-family: 'Times New Roman', Times, serif;
-    justify-content: space-around; 
-}
-
-.cart4 {
-    font-family: 'Times New Roman', Times, serif;
-    justify-content: space-around;  
-}
-
-.see{
-    font-family: 'Times New Roman', Times, serif;
-    padding: 2rem;
-    text-align: center;
-    justify-content: center;
-    font-size: medium;
-    }
-
-.saw{
-    color: aqua;
-    background-color: grey;
-    font: bold;
-    block-size: 1cm;
-    border-radius: 1rem;
-    border-color: none;
-}    
