--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,7 @@ header{
 .cart{
     position: fixed;
     top: 0;
-    right: 0;
+    right: -100%;
     width: 360px;
     min-height: 100vh;
     padding: 20px;
@@ -191,4 +191,38 @@ header{
     color: var(--bg-color);
     padding: 10px;
     cursor: pointer;
+}
+
+/* home page */
+.store{
+    font-family: 'Times New Roman', Times, serif;
+    color: blueviolet;
+    justify-content: center;
+    text-align: center;
+    padding: 20px;
+}
+.tickets{
+    font-family: 'Times New Roman', Times, serif;
+    color: blueviolet;
+    justify-content: center;
+    text-align: center;
+    padding: 10px;
+}
+.button{
+    font-family: 'Times New Roman', Times, serif;
+    background-color: lightskyblue;
+    font-size: 15px;
+    border-radius: 10%;
+    cursor: pointer;
+    font-weight: 200;
+}
+
+/* about page */
+.qoutes{
+    font-family: 'Times New Roman', Times, serif;
+    color: blueviolet;
+    background-color: aquamarine;
+    text-align: center;
+    padding: 40px;
+    justify-content: center;
 }
